resources/public/css/style.css
/* ... */
div.revisions-navigator div.revisions-navigator-right div.single-next p {
  margin: 5px 8px 0px 0px;
  float: right;
}

div.revisions-navigator p.rev-nav-label {
  color: #5B5B5B;
  font-size: 16px;
  font-weight: normal;
}

div.revisions-navigator p.rev-nav-date {
  color: #5B5B5B;
  font-size: 16px;
  font-weight: 300;
}

div.revisions-navigator div.revisions-navigator-right div.single-next,
div.revisions-navigator div.revisions-navigator-right div.double-next {
  float: right;
}

div.revisions-navigator div.revisions-navigator-right div.double-next {
  margin-left: 10px;
}

hr.section-separator {
  background-color: rgba(0, 0, 0, 0.2);
  width: 100%;
  height: 1px;
  border: 0px solid transparent;
  border-top: 0px solid transparent;
  margin: 0;
}

h4.login-error-message {
  color: red;
  font-size: 14px;
}

div.user-profile div.panel-heading {
  font-weight: bold;
  font-size: 16px;
}

div.user-profile div.panel-body span.user-profile-label {
  width: 150px;
  float: left;
  font-size: 14px;
  font-weight: bold;
}

div.user-avatar img.user-avatar-img {
  margin: 10px;
}

div.user-avatar span.user-avatar-name {
  margin-right: 10px;
  color: #2D2D2D;
  font-size: 12pt;
}

div.company-avatar a, div.company-avatar a:hover {
  text-decoration: none;
}

div.company-avatar div.company-avatar-img {
  border: 1px solid black;
  margin-top: -10px;
  padding: 9px;
  float: left;
}

div.company-avatar div.company-avatar-img span.company-avatar-initial {
  font-size: 28px;
  color: black;
}

div.company-avatar div.company-avatar-name {
  float: left;
  font-size: 16px;
  margin-left: 10px;
  color: black;
}

button.oc-btn {
  border: 1px solid rgba(0, 0, 0, 0.4);
  font-size: 10px;
  margin-left: 0px;
  margin-right: 20px;
  height: 20px;
  width: 60px;
  border-radius: 4px;
  background-color: transparent;
  margin-top: 30px;
}

button.oc-btn:active,
button.oc-btn:focus {
  outline: none;
}

button.oc-btn.disabled,
button.oc-btn[disabled] {
  opacity: 0.3;
}

button.oc-btn.oc-cancel {
  color: rgba(0, 0, 0, 0.4);
}

button.oc-link {
  border: 0px solid rgba(0, 0, 0, 0.4);
  font-size: 10px;
  margin-left: 0px;
  margin-right: 20px;
  height: 20px;
  width: 60px;
  border-radius: 0px;
  background-color: transparent;
  color: #109DB7;
  margin-top: 30px;
}

div.sections-container {
  position: relative;
}

div.table-of-contents {
  position: fixed;
  top: 50px;
  overflow-y: auto;
  height: 90%;
  padding: 10px;
  color: #2D2D2D;
  width: 241px;
}

@media (max-width: 1024px) {
  div.table-of-contents {
    display: none;
  }
}

div.table-of-contents div.table-of-contents-inner{
  width: 100%;
  height: 100%;
  overflow-y: auto;
}

div.table-of-contents div.table-of-contents-inner div.category {
  margin-left: 30px;
}

div.table-of-contents div.table-of-contents-inner div.category.empty {
  color: rgba(0, 0, 0, 0.4);
}

div.table-of-contents div.table-of-contents-inner div.category h3 {
  font-size: 16px;
  text-transform: uppercase;
  font-weight: bold;
}

div.table-of-contents div.table-of-contents-inner div.category-section {
  height: 57px;
  width: 195px;
  padding: 10px 0px 10px 10px;
}

div.table-of-contents div.category-section div.category-section-close {
  float: left;
  opacity: 0;
  cursor: pointer;
  margin-top: 9px;
  background-image: url("/img/remove_section.png");
  width: 20px;
  height: 20px;
  background-size: 20px 20px;
}

div.table-of-contents div.category-section:hover div.category-section-close:not(.read-only),
div.table-of-contents div.category-sortable.ui-draggable-dragging div.category-section-close:not(.read-only) {
  opacity: 1;
}

div.table-of-contents div.category-section div.category-section-sortable {
  float: right;
  opacity: 0;
  cursor: hand;
  margin-top: 6px;
  background-image: url("/img/draggable.png");
  width: 20px;
  height: 30px;
  background-size: 20px 30px;
}

div.table-of-contents div.category-section:hover div.category-section-sortable:not(.read-only),
div.table-of-contents div.category-section.ui-draggable-dragging div.category-section-sortable:not(.read-only) {
opacity: 1;
}

div.table-of-contents div.table-of-contents-inner div.category-section a {
  margin: 0 0 0 10px;
  width: 135px;
  float: left;
  overflow: hidden;
}

div.table-of-contents div.table-of-contents-inner div.category-section:hover,
div.table-of-contents div.table-of-contents-inner div.category-section.ui-draggable-dragging{
  background-color: rgba(0, 0, 0, 0.07);
}

div.table-of-contents div.table-of-contents-inner div.new-section {
  height: 8px;
  margin-right: 14px;
  background-color: transparent;
  cursor: pointer;
}

div.table-of-contents div.table-of-contents-inner div.new-section div.new-section-internal {
  height: 1px;
  position: relative;
  top: 4px;
  left: 0px;
  width: 178px;
  background-color: rgba(0, 0, 0, 0.1);
  display: none;
}

div.table-of-contents div.table-of-contents-inner div.new-section:hover div.new-section-internal {
  display: block;
}

div.table-of-contents div.table-of-contents-inner div.new-section div.add-section {
  width: 20px;
  height: 20px;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 2px;
  position: relative;
  left: 181px;
  top: -6px;
  display: none;
  padding: 2px 0 0 4px;
  color: white;
  font-size: 14px;
  cursor: pointer;
  z-index: 10;
}

div.table-of-contents div.table-of-contents-inner div.new-section:hover div.add-section {
  display: block;
}

div.table-of-contents div.add-section:after {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: rgba(0, 0, 0, 0);
  border-right-color: rgba(0, 0, 0, 0.1);
  border-width: 4px;
  margin-top: -4px;
}

div.table-of-contents div.add-section.show {
  display: block;
}
/* ... */

